--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0033)https://rodrigoluis.github.io/CG/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Computação Gráfica</title>
+    <title>Exemplo</title>
     <style>
       body {
         color: #707070;
@@ -22,13 +22,6 @@
 
 <body>
 <!-- This is a comment in the source -->
-<h3>Computer Graphics with Three.js (temporary page)</h3>
+<h3>Index vazio.</h3>
 <p>
-
-<a href="https://rodrigoluis.github.io/CG/src/cubeview.html" target="_blank">Cubeview</a><br>
-<a href="https://rodrigoluis.github.io/CG/src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
-<a href="https://rodrigoluis.github.io/CG/src/Projection.html" target="_blank">Projection</a><br>
-
-
-
 </p></body></html>
