--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-                    <img src="https://www.w3schools.com/w3images/house5.jpg" alt="House" style="width:100%">
+                    <div class="w3-display-topleft w3-black w3-padding">Google Arts & Culture</div>
+                    <img src="img/gartculture.jpg" alt="House" style="width:100%">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-                    <img src="https://www.w3schools.com/w3images/house2.jpg" alt="House" style="width:100%">
+                    <div class="w3-display-topleft w3-black w3-padding">Google Expeditions</div>
+                    <img src="img/gexpeditions.png" alt="House" style="width:100%">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-                    <img src="https://www.w3schools.com/w3images/house3.jpg" alt="House" style="width:100%">
+                    <div class="w3-display-topleft w3-black w3-padding">Sites in VR</div>
+                    <img src="img/sitesvr.jpg" alt="House" style="width:100%">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-                    <img src="https://www.w3schools.com/w3images/house4.jpg" alt="House" style="width:100%">
+                    <div class="w3-display-topleft w3-black w3-padding">Matterport VR</div>
+                    <img src="img/matterport.jpg" alt="House" style="width:100%">
                 </div>
             </div>
         </div>
@@ -74,21 +74,21 @@
 
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="https://www.w3schools.com/w3images/team2.jpg" alt="John" style="width:100%">
+                <img src="img/person.jpg" alt="John" style="width:100%">
                 <h3>John Doe</h3>
                 <p class="w3-opacity">CEO & Founder</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
+                <img src="img/person.jpg" alt="Jane" style="width:100%">
                 <h3>Jane Doe</h3>
                 <p class="w3-opacity">Architect</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="https://www.w3schools.com/w3images/team3.jpg" alt="Mike" style="width:100%">
+                <img src="img/person.jpg" alt="Mike" style="width:100%">
                 <h3>Mike Ross</h3>
                 <p class="w3-opacity">Architect</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
