added preoject page protoype (google arts & culture)

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">Google Arts & Culture</div>
-                    <img src="img/gartculture.jpg" alt="House" style="width:100%">
-                </div>
+                <a href="gartsculture.html" target="_">
+                    <div class="w3-display-container">
+                        <div class="w3-display-topleft w3-black w3-padding">Google Arts & Culture</div>
+                        <img src="img/gartculture.jpg" alt="House" style="width:100%">
+                    </div>
+                </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
