--- a/gartsculture.html
+++ b/gartsculture.html
@@ -54,18 +54,17 @@
             <button class="w3-button w3-black w3-display-right w3-hide-large" onclick="plusDivs(1)">&#10095;</button>
         </div>
 
-        <div class="w3-container w3-padding-32" id="about">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <div class="w3-container w3-padding-48" id="about">
+            <p>
+                Google Arts & Culture allow users to access content of over 2000 museums around the world. Among all the archives, collections, and other offered features, there is also more than 300 virtual reality guided tours waiting for you to be taken.
             </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <p>
+                What about visiting <a href="https://artsandculture.google.com/partner/parco-archeologico-e-paesaggistico-valle-dei-templi?hl=en">ancient Greek temples</a>? Or exploring the masterpieces in <a href="https://artsandculture.google.com/partner/dulwich-picture-gallery?hl=en">England’s first purpose-built public art gallery</a>?
+                You can even get to know one of the New Seven Wonders of the World, <a href="https://artsandculture.google.com/partner/congrega%C3%A7%C3%A3o-do-sant%C3%ADssimo-redentor?hl=en">Christ the Redeemer</a> in Brazil.
             </p>
         </div>
 
-        <div class=" w3-center">
+        <div class=" w3-center w3-padding-16">
             <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.cultural&hl=en_US" target="_blank"><img class="badge" src="img/google-play-badge.png" alt=""></a>
             <a href="https://apps.apple.com/us/app/google-arts-culture/id1050970557" target="_blank"><img class="badge" src="img/app-store-badge.svg" alt=""></a>
         </div>
