project section images changed and alt description corrected

--- a/index.html
+++ b/index.html
@@ -41,26 +41,26 @@
                 <a href="gartsculture.html" target="_">
                     <div class="w3-display-container">
                         <div class="w3-display-topleft w3-black w3-padding">Google Arts & Culture</div>
-                        <img src="img/gartculture.jpg" alt="House" style="width:100%">
+                        <img src="img/gartculture.jpg" alt="Google Arts and Culture logo" style="width:100%">
                     </div>
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
                     <div class="w3-display-topleft w3-black w3-padding">Google Expeditions</div>
-                    <img src="img/gexpeditions.png" alt="House" style="width:100%">
+                    <img src="img/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
                     <div class="w3-display-topleft w3-black w3-padding">Sites in VR</div>
-                    <img src="img/sitesvr.jpg" alt="House" style="width:100%">
+                    <img src="img/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
                     <div class="w3-display-topleft w3-black w3-padding">Matterport VR</div>
-                    <img src="img/matterport.jpg" alt="House" style="width:100%">
+                    <img src="img/matterport.jpg" alt="Matterport VR logo" style="width:100%">
                 </div>
             </div>
         </div>
