Added transparency to projects' titles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
 
+<style>
+    .project-title {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+</style>
+
 <body>
 
     <!-- Navbar (sit on top) -->
@@ -40,26 +47,26 @@
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <a href="gartsculture.html" target="_">
                     <div class="w3-display-container">
-                        <div class="w3-display-topleft w3-black w3-padding">Google Arts & Culture</div>
+                        <div class="project-title w3-display-topleft w3-padding">Google Arts & Culture</div>
                         <img src="img/gartculture.jpg" alt="Google Arts and Culture logo" style="width:100%">
                     </div>
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">Google Expeditions</div>
+                    <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
                     <img src="img/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">Sites in VR</div>
+                    <div class="project-title w3-display-topleft w3-padding">Sites in VR</div>
                     <img src="img/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
                 </div>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
-                    <div class="w3-display-topleft w3-black w3-padding">Matterport VR</div>
+                    <div class="project-title w3-display-topleft w3-padding">Matterport VR</div>
                     <img src="img/matterport.jpg" alt="Matterport VR logo" style="width:100%">
                 </div>
             </div>
