--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <div class="w3-display-container">
-                    <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
-                    <img src="img/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
-                </div>
+                <a href="gexpeditions.html">
+                    <div class="w3-display-container">
+                        <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
+                        <img src="img/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
+                    </div>
+                </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
