Added modal slideshow for project pages

--- a/gexpeditions.html
+++ b/gexpeditions.html
@@ -47,11 +47,11 @@
                 <img class="slide-modal w3-display-middle" src="img/gexpeditions/screenshot3.png" style="height: 100%;">
                 <img class="slide-modal w3-display-middle" src="img/gexpeditions/screenshot4.png" style="height: 100%;">
 
-                <span class="w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
-                <span class="w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
+                <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
+                <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
             </div>
 
-            <span class="w3-text-white w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal()" style="cursor:pointer">×</span>
+            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal()" style="cursor:pointer">×</span>
         </div>
 
         <div class="w3-container w3-padding-48 " id="about ">
