--- a/gartsculture.html
+++ b/gartsculture.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>VR Tools</title>
+<title>VR Tools - Google Arts & Culture</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
@@ -31,13 +31,27 @@
         <!-- images/slideshow -->
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide " src="img/gartsculture/screenshot1.png " alt=" ">
-            <img class="slide " src="img/gartsculture/screenshot2.png " alt=" ">
-            <img class="slide " src="img/gartsculture/screenshot3.png " alt=" ">
-            <img class="slide " src="img/gartsculture/screenshot4.png " alt=" ">
+            <img class="slide " src="img/gartsculture/screenshot1.png " onclick="openModal(1)">
+            <img class="slide " src="img/gartsculture/screenshot2.png " onclick="openModal(2)">
+            <img class="slide " src="img/gartsculture/screenshot3.png " onclick="openModal(3)">
+            <img class="slide " src="img/gartsculture/screenshot4.png " onclick="openModal(4)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
+        </div>
+
+        <div id="modal-slideshow" class="w3-modal w3-black">
+            <div class="w3-content w3-center" style="height: 80%;">
+                <img class="slide-modal w3-display-middle" src="img/gartsculture/screenshot1.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="img/gartsculture/screenshot2.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="img/gartsculture/screenshot3.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="img/gartsculture/screenshot4.png" style="height: 100%;">
+
+                <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
+                <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
+            </div>
+
+            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal()" style="cursor:pointer">×</span>
         </div>
 
         <div class="w3-container w3-padding-48 " id="about ">
