Sites in VR page added

--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <div class="w3-display-container">
-                    <div class="project-title w3-display-topleft w3-padding">Sites in VR</div>
-                    <img src="img/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
-                </div>
+                <a href="sitesinvr.html">
+                    <div class="w3-display-container">
+                        <div class="project-title w3-display-topleft w3-padding">Sites in VR</div>
+                        <img src="img/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
+                    </div>
+                </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-display-container">
