--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="gexpeditions.html">
+                <a href="gexpeditions.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
                         <img src="img/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="sitesinvr.html">
+                <a href="sitesinvr.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Sites in VR</div>
                         <img src="img/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
@@ -69,10 +69,12 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <div class="w3-display-container">
-                    <div class="project-title w3-display-topleft w3-padding">Matterport VR</div>
-                    <img src="img/matterport.jpg" alt="Matterport VR logo" style="width:100%">
-                </div>
+                <a href="matterportvr.html" target="_">
+                    <div class="w3-display-container">
+                        <div class="project-title w3-display-topleft w3-padding">Matterport VR</div>
+                        <img src="img/matterport.jpg" alt="Matterport VR logo" style="width:100%">
+                    </div>
+                </a>
             </div>
         </div>
 
