--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
 
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="img/person.jpg" alt="John" style="width:100%">
-                <h3>John Doe</h3>
+                <img src="img/person.jpg" alt="Rodrigo Silva" style="width:100%">
+                <h3>Rodrigo L. S. Silva</h3>
                 <p class="w3-opacity">CEO & Founder</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="img/person.jpg" alt="Jane" style="width:100%">
-                <h3>Jane Doe</h3>
+                <img src="img/person.jpg" alt="Lucas da Costa" style="width:100%">
+                <h3>Lucas D. da Costa</h3>
                 <p class="w3-opacity">Architect</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="img/person.jpg" alt="Mike" style="width:100%">
-                <h3>Mike Ross</h3>
+                <img src="img/person.jpg" alt="Paulo Rozatto" style="width:100%">
+                <h3>Paulo Victor de M. Rozatto</h3>
                 <p class="w3-opacity">Architect</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
