Projects' images replaced

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="gartsculture.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Google Arts & Culture</div>
-                        <img src="img/gartculture.jpg" alt="Google Arts and Culture logo" style="width:100%">
+                        <img src="img/gartsculture/gartculture.jpg" alt="Google Arts and Culture logo" style="width:100%">
                     </div>
                 </a>
             </div>
@@ -56,7 +56,7 @@
                 <a href="gexpeditions.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
-                        <img src="img/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
+                        <img src="img/gexpeditions/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
                     </div>
                 </a>
             </div>
@@ -64,7 +64,7 @@
                 <a href="sitesinvr.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Sites in VR</div>
-                        <img src="img/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
+                        <img src="img/sitesinvr/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
                     </div>
                 </a>
             </div>
@@ -72,7 +72,7 @@
                 <a href="matterportvr.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Matterport VR</div>
-                        <img src="img/matterport.jpg" alt="Matterport VR logo" style="width:100%">
+                        <img src="img/matterportvr/matterport.jpg" alt="Matterport VR logo" style="width:100%">
                     </div>
                 </a>
             </div>
