--- a/gartsculture.html
+++ b/gartsculture.html
@@ -56,7 +56,7 @@
 
         <div class="w3-container w3-padding-48 " id="about ">
             <p>
-                Google Arts & Culture allow users to access content of over 2000 museums around the world. Among all the archives, collections, and other offered features, there is also more than 300 virtual reality guided tours waiting for you to be taken.
+                Google Arts & Culture allow users to access content of over 2000 museums around the world. Among all the archives, collections and other offered features, there is also more than 300 virtual reality guided tours waiting for you to be taken.
             </p>
             <p>
                 What about visiting <a href="https://artsandculture.google.com/partner/parco-archeologico-e-paesaggistico-valle-dei-templi?hl=en ">ancient Greek temples</a>? Or exploring the masterpieces in <a href="https://artsandculture.google.com/partner/dulwich-picture-gallery?hl=en ">England’s first purpose-built public art gallery</a>?
