--- a/gexpeditions.html
+++ b/gexpeditions.html
@@ -60,7 +60,7 @@
                 <a href="https://poly.google.com/tourcreator">create your own tour</a>. The app supports the creation of classes, in which a teacher can act like a guide and lead the students locally connected from their smartphones or tablets.
             </p>
             <p>
-                So, are you ready to swim with sharks, visit the outer space, explore the ancient Rome, or to play with Dinosaurs?
+                So, are you ready to swim with sharks, visit the outer space, explore the ancient Rome or playing with Dinosaurs?
             </p>
         </div>
 
