--- a/matterportvr.html
+++ b/matterportvr.html
@@ -56,7 +56,7 @@
 
         <div class="w3-container w3-padding-48 " id="about ">
             <p>
-                Matterport VR claims to have the largest collection of real-world VR content, offering an immersive experience in every virtual space, it doesn’t matter the place you are virtually visiting is a travel destination, a celebrity home, or a historic place.
+                Matterport VR claims to have the largest collection of real-world VR content, offering an immersive experience in every virtual space, no matter if the place you are virtually visiting is a travel destination, a celebrity home or a historic place.
             </p>
             <p>
                 The app comes with over 150 VR experiences, but you are able to download more in their <a href="https://matterport.com/industries/gallery" target="_blank">website</a>.
