--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="img/person.jpg" alt="Rodrigo Silva" style="width:100%">
+                <img src="img/vrtools_rodrigo.jpg" alt="Rodrigo Silva" style="width:100%">
                 <h3>Rodrigo L. S. Silva</h3>
                 <p class="w3-opacity">CEO & Founder</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p>Project coordinator and associate professor at UFJF. His main interests are Augmented Reality, Virtual Reality, Scientific Visualization and Computer Graphics.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
