--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <img src="img/vrtools_rodrigo.jpg" alt="Rodrigo Silva" style="width:100%">
                 <h3>Rodrigo L. S. Silva</h3>
-                <p class="w3-opacity">CEO & Founder</p>
+                <p class="w3-opacity">Coordinator</p>
                 <p>Project coordinator and associate professor at UFJF. His main interests are Augmented Reality, Virtual Reality, Scientific Visualization and Computer Graphics.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <img src="img/person.jpg" alt="Lucas da Costa" style="width:100%">
                 <h3>Lucas D. da Costa</h3>
-                <p class="w3-opacity">Architect</p>
+                <p class="w3-opacity">Developer</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <img src="img/person.jpg" alt="Paulo Rozatto" style="width:100%">
                 <h3>Paulo Victor de M. Rozatto</h3>
-                <p class="w3-opacity">Architect</p>
+                <p class="w3-opacity">Developer</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
