Paulo's personal info added

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="img/person.jpg" alt="Paulo Rozatto" style="width:100%">
+                <img src="img/vrtools_paulo.jpg" alt="Paulo Rozatto" style="width:100%">
                 <h3>Paulo Victor de M. Rozatto</h3>
                 <p class="w3-opacity">Developer</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p>Computer Science student at UFJF. He loves coffe and science in general. Currently insterested in Augmented Reality, Virtual Reality, and Computer Graphics.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
         </div>
