More info added for Rodigro and Paulo

--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
                 <h3>Rodrigo L. S. Silva</h3>
                 <p class="w3-opacity">Coordinator</p>
                 <p>Project coordinator and associate professor at UFJF. His main interests are Augmented Reality, Virtual Reality, Scientific Visualization and Computer Graphics.</p>
-                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+                <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6878718102770367" target="_">More info</a></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <img src="img/person.jpg" alt="Lucas da Costa" style="width:100%">
                 <h3>Lucas D. da Costa</h3>
                 <p class="w3-opacity">Developer</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p><a class="w3-button w3-light-grey w3-block" href="#" target="_">More info</a></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <img src="img/vrtools_paulo.jpg" alt="Paulo Rozatto" style="width:100%">
                 <h3>Paulo Victor de M. Rozatto</h3>
                 <p class="w3-opacity">Developer</p>
                 <p>Computer Science student at UFJF. He loves coffe and science in general. Currently insterested in Augmented Reality, Virtual Reality, and Computer Graphics.</p>
-                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+                <p><a class="w3-button w3-light-grey w3-block" href="https://github.com/Paulo-Rozatto" target="_">More info</a></p>
             </div>
         </div>
 
