--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="gartsculture.html" target="_">
+                <a href="projects/gartsculture.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Google Arts & Culture</div>
                         <img src="img/gartsculture/gartculture.jpg" alt="Google Arts and Culture logo" style="width:100%">
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="gexpeditions.html" target="_">
+                <a href="projects/gexpeditions.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
                         <img src="img/gexpeditions/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="sitesinvr.html" target="_">
+                <a href="projects/sitesinvr.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Sites in VR</div>
                         <img src="img/sitesinvr/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
@@ -69,7 +69,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="matterportvr.html" target="_">
+                <a href="projects/matterportvr.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Matterport VR</div>
                         <img src="img/matterportvr/matterport.jpg" alt="Matterport VR logo" style="width:100%">
