Added Lucas info

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                 <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6878718102770367" target="_blank">More info</a></p>
             </div>
             <div class="w3-col l4 m4 w3-margin-bottom">
-                <img src="img/person.jpg" alt="Lucas da Costa" style="width:100%">
+                <img src="img/vrtools_lucas.jpg" alt="Lucas da Costa" style="width:100%">
                 <h3>Lucas D. da Costa</h3>
                 <p class="w3-opacity">Developer</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                <p><a class="w3-button w3-light-grey w3-block" href="#" target="_">More info</a></p>
+                <p>Graduated in Exact Sciences at UFJF (2014-2019). Computer Science student at UFJF. Currently interested in Virtual Reality and Computer Graphics.</p>
+                <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6745472257202199" target="_">More info</a></p>
             </div>
             <div class="w3-col l4 m4 w3-margin-bottom">
                 <img src="img/vrtools_paulo.jpg" alt="Paulo Rozatto" style="width:100%">
