--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#home" class="w3-bar-item w3-button"><b>VR</b> Tools</a>
             <!-- Float links to the right. Hide them on small screens -->
             <div class="w3-right w3-hide-small">
-                <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+                <a href="#vr-apps" class="w3-bar-item w3-button">VR Apps</a>
                 <a href="#about" class="w3-bar-item w3-button">About</a>
                 <a href="#contact" class="w3-bar-item w3-button">Contact</a>
             </div>
@@ -38,14 +38,14 @@
     <!-- Page content -->
     <div class="w3-content w3-padding" style="max-width:1564px">
 
-        <!-- Project Section -->
-        <div class="w3-container w3-padding-32" id="projects">
-            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
+        <!-- VR apps Section -->
+        <div class="w3-container w3-padding-32" id="vr-apps">
+            <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">VR Apps</h3>
         </div>
 
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/gartsculture.html" target="_">
+                <a href="vrapps/gartsculture.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Google Arts & Culture</div>
                         <img src="img/gartsculture/gartculture.jpg" alt="Google Arts and Culture logo" style="width:100%">
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/gexpeditions.html" target="_">
+                <a href="vrapps/gexpeditions.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
                         <img src="img/gexpeditions/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/sitesinvr.html" target="_">
+                <a href="vrapps/sitesinvr.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Sites in VR</div>
                         <img src="img/sitesinvr/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
@@ -69,7 +69,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/matterportvr.html" target="_">
+                <a href="vrapps/matterportvr.html" target="_">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Matterport VR</div>
                         <img src="img/matterportvr/matterport.jpg" alt="Matterport VR logo" style="width:100%">
