--- a/vrapps/matterportvr.html
+++ b/vrapps/matterportvr.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>VR Tools - Google Arts & Culture</title>
+<title>VR Tools - Matterport VR</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../css/w3.css">
@@ -14,7 +14,7 @@
             <a href="../index.html#home " class="w3-bar-item w3-button "><b>VR</b> Tools</a>
             <!-- Float links to the right. Hide them on small screens -->
             <div class="w3-right w3-hide-small ">
-                <a href="../index.html#projects " class="w3-bar-item w3-button ">Projects</a>
+                <a href="../index.html#vr-apps" class="w3-bar-item w3-button">VR Apps</a>
                 <a href="../index.html#about " class="w3-bar-item w3-button ">About</a>
                 <a href="../index.html#contact " class="w3-bar-item w3-button ">Contact</a>
             </div>
@@ -25,16 +25,16 @@
     <div class="w3-content w3-padding " style="max-width:1564px ">
 
         <div class="w3-container w3-padding-32 " id="projects ">
-            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Google Arts & Culture</h1>
+            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Matterport VR</h1>
         </div>
 
         <!-- images/slideshow -->
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide " src="../img/gartsculture/screenshot1.png " onclick="openModal(1)">
-            <img class="slide " src="../img/gartsculture/screenshot2.png " onclick="openModal(2)">
-            <img class="slide " src="../img/gartsculture/screenshot3.png " onclick="openModal(3)">
-            <img class="slide " src="../img/gartsculture/screenshot4.png " onclick="openModal(4)">
+            <img class="slide horizontal " src="../img/matterportvr/screenshot1.png " onclick="openModal(1)">
+            <img class="slide horizontal " src="../img/matterportvr/screenshot2.png " onclick="openModal(2)">
+            <img class="slide horizontal " src="../img/matterportvr/screenshot3.png " onclick="openModal(3)">
+            <img class="slide horizontal " src="../img/matterportvr/screenshot4.png " onclick="openModal(4)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
@@ -42,10 +42,10 @@
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="../img/gartsculture/screenshot1.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="../img/gartsculture/screenshot2.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="../img/gartsculture/screenshot3.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="../img/gartsculture/screenshot4.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="../img/matterportvr/screenshot1.png" style="width: 100%;">
+                <img class="slide-modal w3-display-middle" src="../img/matterportvr/screenshot2.png" style="width: 100%;">
+                <img class="slide-modal w3-display-middle" src="../img/matterportvr/screenshot3.png" style="width: 100%;">
+                <img class="slide-modal w3-display-middle" src="../img/matterportvr/screenshot4.png" style="width: 100%;">
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
@@ -56,17 +56,16 @@
 
         <div class="w3-container w3-padding-48 " id="about ">
             <p>
-                Google Arts & Culture allow users to access content of over 2000 museums around the world. Among all the archives, collections and other offered features, there is also more than 300 virtual reality guided tours waiting for you to be taken.
+                Matterport VR claims to have the largest collection of real-world VR content, offering an immersive experience in every virtual space, no matter if the place you are virtually visiting is a travel destination, a celebrity home or a historic place.
             </p>
             <p>
-                What about visiting <a href="https://artsandculture.google.com/partner/parco-archeologico-e-paesaggistico-valle-dei-templi?hl=en ">ancient Greek temples</a>? Or exploring the masterpieces in <a href="https://artsandculture.google.com/partner/dulwich-picture-gallery?hl=en ">England’s first purpose-built public art gallery</a>?
-                You can even get to know one of the New Seven Wonders of the World, <a href="https://artsandculture.google.com/partner/congrega%C3%A7%C3%A3o-do-sant%C3%ADssimo-redentor?hl=en ">Christ the Redeemer</a> in Brazil.
+                The app comes with over 150 VR experiences, but you are able to download more in their <a href="https://matterport.com/industries/gallery" target="_blank">website</a>.
             </p>
         </div>
 
         <div class=" w3-center w3-padding-16 ">
-            <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.cultural&hl=en_US " target="_blank "><img class="badge " src="../img/google-play-badge.png " alt=" "></a>
-            <a href="https://apps.apple.com/us/app/google-arts-culture/id1050970557 " target="_blank "><img class="badge " src="../img/app-store-badge.svg " alt=" "></a>
+            <a href="https://play.google.com/store/apps/details?id=com.matterport.mpvrcardboard&hl=en" target="_blank "><img class="badge " src="../img/google-play-badge.png " alt=" "></a>
+            <a href="https://apps.apple.com/us/app/matterport-vr/id1168808473" target="_blank "><img class="badge " src="../img/app-store-badge.svg " alt=" "></a>
         </div>
 
         <!-- End page content -->
