Platonic solids application added

--- a/projects/platonic-solids-application.html
+++ b/projects/platonic-solids-application.html
@@ -9,15 +9,15 @@
                 margin: 0;
                 overflow: hidden;
             }
-            </style>
+        </style>
 
         <!-- Libraries of configuration -->
         <script type="text/javascript" charset="UTF-8" src="libs/three/three.js"></script>
         <script type="text/javascript" charset="UTF-8" src="libs/three/controls/TrackballControls.js"></script>
         <script type="text/javascript" src="libs/util/Stats.js"></script>
         <script type="text/javascript" src="libs/util/dat.gui.js"></script>
-        <!--
-        -->
+        
+        <!-- There are many useful functionss -->
         <script type="text/javascript" src="libs/util/util.js"></script>
 
         <!-- Library of example -->
@@ -27,9 +27,7 @@
 
     <body>
 
-        <div class="w3-container w3-padding-32" id="status-output">
-            <div id="webgl-output" ></div>
-        </div>
+        <div id="webgl-output" ></div>
         <script type="text/javascript"> (function () { init() })(); </script>
     </body>
 
