--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -45,8 +45,12 @@
 
         </div>
 
-        <div style="text-align:center">
-            <iframe id="scene" src="./src/platonic-solids-application.html" height="400" width="800" style="border:2px solid black;"></iframe>
+        <div class="w3-container w3-row " style="text-align:center;">
+            <!-- workaround to center iframe -->
+            <div class="w3-col m2 l2 w3-hide-small">
+                <p></p>
+            </div>
+            <iframe id="scene" class="w3-col l8" src="./src/platonic-solids-application.html" height="400" style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
 
@@ -62,6 +66,35 @@
             </script>
         </div>
 
+        <div class="w3-container w3-padding-32 ">
+            <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Images in Augmented Reality</h1>
+        </div>
+
+        <div class="w3-content w3-display-container w3-center w3-row ">
+
+            <img class="slide " src="./img/screenshot1.png" onclick="openModal(1)">
+            <img class="slide " src="./img/screenshot2.png " onclick="openModal(2)">
+            <img class="slide " src="./img/screenshot3.png " onclick="openModal(3)">
+            <img class="slide " src="./img/screenshot4.png " onclick="openModal(4)">
+
+            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">&#10094;</button>
+            <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
+        </div>
+
+        <div id="modal-slideshow" class="w3-modal w3-black">
+            <div class="w3-content w3-center" style="height: 80%;">
+                <img class="slide-modal w3-display-middle" src="./img/screenshot1.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/screenshot2.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/screenshot3.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/screenshot4.png" style="height: 100%;">
+
+                <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
+                <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
+            </div>
+
+            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal()" style="cursor:pointer">×</span>
+        </div>
+
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
             <p><i> Weisstein, Eric W. "Platonic Solid." From MathWorld--A Wolfram Web Resource. https://mathworld.wolfram.com/PlatonicSolid.html </i></p>
@@ -75,7 +108,7 @@
     <footer class="w3-center w3-black w3-padding-16 ">
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS " target="_blank " class="w3-hover-text-green ">w3.css</a></p>
     </footer>
-
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
