(Solar System) Added planets and sun

--- a/projects/src/solar-system-application.html
+++ b/projects/src/solar-system-application.html
@@ -56,9 +56,7 @@
     </div>
     <div id="webgl-output"></div>
     <script type="text/javascript">
-        (function() {
-            init()
-        })();
+        init();
     </script>
 </body>
 
