(Solar System) Orbit controls

--- a/projects/src/solar-system-application.html
+++ b/projects/src/solar-system-application.html
@@ -36,6 +36,7 @@
     <!-- Libraries of configuration -->
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/OrbitControls.js"></script>
     <script type="text/javascript" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" src="../libs/util/dat.gui.js"></script>
 
@@ -51,8 +52,8 @@
 
     <!-- Open the application on another tab -->
     <div id="newWindow">
-        <p><a id="" href="./platonic-solids-application.html" target="_blank">Open in New Window</a></p>
-        <p><a id="" href="./platonic-solids-application-AR.html" target="_blank">Open in Augmented Reality</a></p>
+        <p><a id="" href="./solar-system-application.html" target="_blank">Open in New Window</a></p>
+        <p><a id="" href=" " target="_blank">Open in Augmented Reality</a></p>
     </div>
     <div id="webgl-output"></div>
     <script type="text/javascript">
