(Solar System) Medium Quality images

--- a/projects/src/solar-system-application.html
+++ b/projects/src/solar-system-application.html
@@ -59,7 +59,7 @@
     </div>
     <div id="webgl-output"></div>
     <script type="text/javascript">
-        main();
+        mainMediumQuality();
     </script>
 </body>
 
