(Solar System - VR) skyBox Galaxy

--- a/projects/src/platonic-solids-application-AR.html
+++ b/projects/src/platonic-solids-application-AR.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Platonic Solids</title>
+        <title>Platonic Solids - AR</title>
         <meta charset="UTF-8">
         <!-- Tag that adapt the dimensions(width, height) of interface for mobile devices:
             https://developer.mozilla.org/pt-BR/docs/Mozilla/Mobile/Viewport_meta_tag
