--- a/projects/src/solar-system-application-AR.html
+++ b/projects/src/solar-system-application-AR.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>Solar System</title>
+    <title>Solar System - AR</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
         body {
             margin: 0;
