--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -29,7 +29,7 @@
     <div class="w3-content w3-padding " style="max-width:1564px ">
 
         <div class="w3-container w3-padding-32 " id="projects">
-            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Platonics solids</h1>
+            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Solar System</h1>
         </div>
 
         <div class="w3-container" id="about">
@@ -48,7 +48,7 @@
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
-            <iframe id="scene" class="w3-col l8" src="./src/platonic-solids-application.html" height="400" style="border:2px solid black;"></iframe>
+            <iframe id="scene" class="w3-col l8" src="./src/solar-system-application.html" height="400" style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
 
