--- a/projects/src/solar-system-application.html
+++ b/projects/src/solar-system-application.html
@@ -4,7 +4,7 @@
 <head>
     <title>Solar System</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
         body {
             margin: 0;
