Link to Solar System example on projects

--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
                     </div>
                 </a>
             </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <a href="projects/solar-system.html" target="_">
+                    <div class="w3-display-container">
+                        <div class="project-title w3-display-topleft w3-padding">Solar System</div>
+                        <img src="img/solar-system/solar-system.png" alt="Platonic Solids logo" style="width:100%">
+                    </div>
+                </a>
+            </div>
         </div>
 
         <!-- About Section -->
