(Solar System) Text update

--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -34,11 +34,14 @@
 
         <div class="w3-container" id="about">
             <p>
-                Text
+                The Solar System  formed 4.6 billion years ago from the gravitational collapse of a giant interstellar molecular cloud. 
+                The vast majority of the system's mass is in the Sun, with the majority of the remaining mass contained in Jupiter. Consist of 8 planets around the sun, 
+                been Mercury, Venus, Earth, Mars with a solid surface and Jupiter, Saturn, Uranus, Neptune in gas state.
             </p>
 
             <p>
-                Text
+                The Solar system have others interesting points like have a moon around the earth and other moons around other planets and in Saturn can be see a cloud
+                composed by rocks in a ring format orbiting around the planet
             </p>
 
         </div>
@@ -85,8 +88,6 @@
                 </p>
             </div>
         </div>
-        
-        
 
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Images in Augmented Reality</h3>
