(Solar System) Text update

--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -32,16 +32,18 @@
             <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Solar System</h1>
         </div>
 
-        <div class="w3-container" id="about">
+        <div class="w3-container" id="about" style="text-align:justify;">
             <p>
-                The Solar System  formed 4.6 billion years ago from the gravitational collapse of a giant interstellar molecular cloud. 
-                The vast majority of the system's mass is in the Sun, with the majority of the remaining mass contained in Jupiter. Consist of 8 planets around the sun, 
-                been Mercury, Venus, Earth, Mars with a solid surface and Jupiter, Saturn, Uranus, Neptune in gas state.
+                The Solar System was formed 4.6 billion years ago. The vast majority of the system's mass is 
+                in the Sun, with most of the remaining mass contained in Jupiter. It presents 8 planets around 
+                the sun, being Mercury, Venus, Earth, Mars with a solid surface and Jupiter, Saturn, Uranus, 
+                Neptune in the gaseous state and Pluto as a dwarf planet.
             </p>
 
             <p>
-                The Solar system have others interesting points like have a moon around the earth and other moons around other planets and in Saturn can be see a cloud
-                composed by rocks in a ring format orbiting around the planet
+                The solar system has other interesting points, like a moon around the earth in which it has 
+                a strong influence on the tides and waves in the oceans. On Saturn, you can see a cloud made 
+                up of rocks and ring-shaped particles that orbit the planet.
             </p>
 
         </div>
