--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -32,7 +32,7 @@
             <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Platonics solids</h1>
         </div>
 
-        <div class="w3-container" id="about">
+        <div class="w3-container" id="about" style="text-align:justify;">
             <p>
                 Platonic solids, also called regular solids or regular polyhedra, are convex polyhedrons with identical faces composed of convex regular polygons. Euclid (ancient Greek mathematician) proved that there are five of such solids: the cube, dodecahedron,
                 icosahedron, octahedron, and tetrahedron.
@@ -45,7 +45,7 @@
 
         </div>
 
-        <div class="w3-container w3-row " style="text-align:center;">
+        <div class="w3-container w3-row " >
             <!-- workaround to center iframe -->
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
