Saturn Ring texture

--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -122,8 +122,10 @@
 
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
-            <p><i> Weisstein, Eric W. "Platonic Solid." From MathWorld--A Wolfram Web Resource. https://mathworld.wolfram.com/PlatonicSolid.html </i></p>
-            <p><i>Heilbron, J.L. "Platonic solid." From Encyclopædia Britannica, inc. Web resource https://www.britannica.com/science/Platonic-solid</i></p>
+            <p><i>Alpha-Element, "Saturn-Ring texture", Web resource: https://www.deviantart.com/alpha-element/art/Stock-Image-Saturn-Rings-393767006 </i></p>            
+            <p><i>Solar System Scope, "Solar System textures", Web resource: https://www.solarsystemscope.com/textures/</i></p>
+            <p><i>SOLAR System. In: Wikipedia: a enciclopédia livre. Disponível em: 
+                &#60;https://en.wikipedia.org/wiki/Solar_System&#62; Acesso em: 14 jun 2020.</i></p>
         </div>
 
         <!-- End page content -->
