(Solar System) Adjust image theme of project on main page

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
         </div>
 
         <div class="w3-row-padding">
-            <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-col l3 m6 w3-margin-bottom ">
                 <a href="projects/platonic-solids.html" target="_">
-                    <div class="w3-display-container">
+                    <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Platonic Solids</div>
-                        <img src="img/platonic-solids/platonic-solids.jpeg" alt="Platonic Solids logo" style="width:100%">
+                        <img src="img/platonic-solids/platonic-solids.jpeg" alt="Platonic Solids logo" style="width:100%;">
                     </div>
-                </a>
+                </a>                
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <a href="projects/solar-system.html" target="_">
-                    <div class="w3-display-container">
+                    <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Solar System</div>
-                        <img src="img/solar-system/solar-system.png" alt="Platonic Solids logo" style="width:100%">
+                        <img src="img/solar-system/solar-system.png" alt="Solar System logo" style="width:100%;">
                     </div>
                 </a>
             </div>
